--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* stylelint-disable max-empty-lines */
+
 body {
   box-sizing: border-box;
   position: relative;
@@ -12,6 +14,10 @@ body {
 
 h1 {
   text-align: center;
+}
+
+.red {
+  color: red;
 }
 
 .page-wrapper {
@@ -96,6 +102,7 @@ ul li input {
   box-shadow: 3px 3px;
 }
 
+
 /* header style */
 
 .header-wraper {
@@ -126,7 +133,9 @@ ul li input {
   cursor: pointer;
 }
 
+
 /* date part */
+
 .date-container {
   width: 100vw;
   margin-bottom: 4rem;
@@ -159,7 +168,9 @@ ul li input {
   font-weight: 700;
 }
 
+
 /* contact information section */
+
 .contact-information-section {
   display: none;
 }
